sp.test:   test case for the fix for bug #2614 sp_head.cc:   A fix for a crashing bug in stored procedures with INSERT ... SELECT ... (Bug #2514)